fix layout issues with images and text overflowing box

--- a/src/app.css
+++ b/src/app.css
@@ -41,9 +41,7 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -52,8 +50,15 @@ button {
   transition: border-color 0.25s;
 }
 
-button:hover {
-  border-color: #646cff;
+.btn {
+  padding: 0.6em 1.2em;
+  background-color: #1a1a1a;
+  text-align: center;
+  color: white;
+
+  :hover {
+    border-color: #bbb;
+  }
 }
 
 * {
